# GServer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Common/Log/: CMakeLists.txt  Log.cpp  Log.h
Common/NetMsgDefine/: CMakeLists.txt  Msg.pb.cc  Msg.pb.h  Msg.proto
Common/NetPlugin/: CMakeLists.txt  NetPlugin.cpp  NetPlugin.h  NetServer.cpp  NetServer.h  pch.h
Common/SQLPlugin/: CMakeLists.txt
Common/SQLPlugin/Common/: QueryResult.h  SQLService.cpp  SQLService.h  pch.h
Common/SQLPlugin/SQLitePlugin/: SQLitePlugin.cpp  SQLitePlugin.filters  SQLitePlugin.h  SQLiteQueryResult.cpp  SQLiteQueryResult.h  SQLiteService.cpp  SQLiteService.h
Common/SQLPlugin/SQLitePlugin/sqlite/: CMakeLists.txt
DemoPlugin/: CMakeLists.txt  DemoModule.cpp  DemoModule.h  DemoPlugin.cpp  DemoPlugin.h  Msg.h  PlugInMain.cpp
GameServer/: CMakeLists.txt  CmdOptions.h  DynLib.cpp  DynLib.h  GameServer.cpp  PluginManager.cpp  PluginManager.h  pch.h
Include/: IDemoModule.h  ILoginModule.h  IModule.h  INetServer.h  IPlugin.h  IPluginManager.h  IRegisterModule.h
Include/DataService/: IData.h  IDataService.h  ITable.h
Include/DataService/automake/: Global.h  LanguageSetConfig.h  TableLoader.h
Include/SQLService/: IQueryResult.h  ISQLService.h
Plugins/DemoPlugin/: CMakeLists.txt  DemoModule.cpp  DemoModule.h  DemoPlugin.cpp  DemoPlugin.h  pch.h
Plugins/UserPlugin/: CMakeLists.txt  LoginModule.cpp  LoginModule.h  Msg.h  RegisterModule.cpp  RegisterModule.h  UserPlugin.cpp  UserPlugin.h  pch.cpp  pch.h
Resources/: Dependences
Resources/Configs/: Plugins.json
Resources/Data/: data.sqlite
SandBox/: CMakeLists.txt  SandBox.cpp
SandBox/DemoLib/: CMakeLists.txt  test.cpp  test.h
